--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,3 +97,8 @@ body{
     width: 178px;
     margin-top: 210px;
 }
+
+button{
+    font-family: 'Skranji', cursive;
+    font-size: 40px !important;
+}
