--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body,html{
 }
 
 body{
-    background: #000000;
+    background: url('../images/dark-triangles.png');
     overflow-y: hidden;
 }
 
@@ -15,7 +15,7 @@ body{
 
 .owls{
     height: 300px;
-    width: 200px;
+    width: 220px;
     filter: brightness(130%);
     margin-top: 50%;
 }
@@ -39,66 +39,59 @@ body{
 
 .vid{
     margin-top: 10%;
-    height: 360px;
     width: 640px;
     margin-left: -22px !important;
     z-index: 0 !important;
+    animation: myFrames 25s  ease-in-out !important;
 }
 
+@keyframes myFrames{
 
-.bottomVidDiv{
-    width: 640px;
-    height: 180px;
-    background-color: black;
-    margin-left: -22px !important;
-    margin-top: -221px;
-    z-index: 1 !important;
-    /* animation: myFrames 25s; */
-}
+    0%{
+        height: 0;
+        margin-left: -22px !important;
 
-/* @keyframes myFrames{
-
+    }
     44% {
 
-        height: 180px;
+        height: 0;
+        margin-left: -22px !important;
 
     }
 
     100%{
-        height: 0;
+        height: 360px;
+        margin-left: -22px !important;
     }
-} */
-
-.bottomVidDiv2{
-    width: 640px;
-    height: 180px;
-    background-color: black;
-    margin-left: -22px !important;
-    margin-top: -324px;
-    z-index: 1 !important;
-    /* animation: myFrames 25s; */
 }
 
 #content{
     display: none;
 }
 
-#beginBtn{
-    width: 400px;
-    height: 50px;
-    margin-top: 100px;
-    margin-left: 90px;
-    background: #760b76 !important;
-    border: 1px solid #760b76;
-}
+
 
 .cross{
     height: 178px;
     width: 178px;
-    margin-top: 210px;
+    margin-top: 6%;
 }
 
 button{
+    margin-top: 300px !important;
+    margin-top: 60px !important;
     font-family: 'Skranji', cursive;
     font-size: 40px !important;
+    background-color: #3f51b5 !important;
+    color: #FFFFFF !important;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12) !important;
+    border-radius: none !important;
+}
+
+#beginBtn{
+    width: 400px;
+    height: 50px;
+    margin-top: 380px !important;
+    margin-left: 90px;
+    border: none;
 }
